Minor Fix: Mail List was overflowing
Hence, we gave padding left and right as 0.

--- a/UI/src/components/mailList/mailList.css
+++ b/UI/src/components/mailList/mailList.css
@@ -8,7 +8,7 @@
   gap: 10px;
   background-color: #003580;
   color: white;
-  padding: 50px;
+  padding: 50px 0px;
 }
 
 .mailInputContainer {
